--- a/about/index.html
+++ b/about/index.html
@@ -116,7 +116,7 @@
                 <li><a href="#">農村民泊とは</a></li>
                 <li><a href="../plan/index.html">体験プラン</a></li>
                 <li><a href="../access/index.html">アクセス</a></li>
-                <li><a href="../contact/index.html">お問い合わせ・よくあるご質問</a></li>
+                <li><a href="../contact/index.html">お問い合わせ</a></li>
                 <li><a href="../reservation/index.html">ご予約</a></li>
             </ul>
             <div class="footer_address">
