--- a/plan/index.html
+++ b/plan/index.html
@@ -195,7 +195,7 @@
                 <li><a href="../about/index.html">農村民泊とは</a></li>
                 <li><a href="#">体験プラン</a></li>
                 <li><a href="../access/index.html">アクセス</a></li>
-                <li><a href="../contact/index.html">お問い合わせ・よくあるご質問</a></li>
+                <li><a href="../contact/index.html">お問い合わせ</a></li>
                 <li><a href="../reservation/index.html">ご予約</a></li>
             </ul>
             <div class="footer_address">
