--- a/reservation/index.html
+++ b/reservation/index.html
@@ -120,7 +120,7 @@
                 <li><a href="../about/index.html">農村民泊とは</a></li>
                 <li><a href="../plan/index.html">体験プラン</a></li>
                 <li><a href="../access/index.html">アクセス</a></li>
-                <li><a href="../contact/index.html">お問い合わせ・よくあるご質問</a></li>
+                <li><a href="../contact/index.html">お問い合わせ</a></li>
                 <li><a href="#">ご予約</a></li>
             </ul>
             <div class="footer_address">
